# Manicore

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  docs-MAINPAGE.md  mesh_format  ref_exterior_algebra
.github/workflows/: doxygen-action.yml  static.yml
Schemes/: CMakeLists.txt
Schemes/Maxwell2D/: CMakeLists.txt  maxwell.cpp  maxwell.hpp  maxwell.test.cpp  sphere_ref.hpp  torus_ref.hpp
Schemes/Maxwell2D/convergence rate scripts/: README.md  computeSpaceTime.cpp  compute_rate.pl  gen_ssphere.pl  run.sh  run_testcase.sh
docs_sources/: Paraview_csv.md  custom.css  docs-MAINPAGE.md
include/: definitions.hpp  exterior_algebra.hpp  exterior_dimension.hpp  exterior_objects.hpp  map_interface.hpp  parallel_for.hpp  preprocessor.hpp
meshes/: CMakeLists.txt
meshes/sphere/: 11_circle.json  21_circle.json  29_circle.json  4_circle.json  6_circle.json  CMakeLists.txt  CellsTypes.py  Disk mesh gen auto.ipynb  disk_mappings.cpp
meshes/test/: 23_pts.json  35_pts.json  58_pts.json  58_pts_cart.json  CMakeLists.txt  disk_mappings.cpp  disk_mappings_cart.cpp  disk_mappings_constant.cpp  disk_mappings_constant_hc.cpp
meshes/torus/: CMakeLists.txt  Torus mesh gen.ipynb  torus_10.json  torus_15.json  torus_20.json  torus_25.json  torus_30.json  torus_35.json  torus_40.json  torus_5.json  torus_mappings.cpp
src/Common/: definitions.hpp  exterior_algebra.hpp  exterior_dimension.hpp  exterior_objects.hpp  geometry.hpp  map_interface.hpp  parallel_for.hpp
src/DDR/: CMakeLists.txt  ddr_spaces.cpp  ddr_spaces.hpp  pec.cpp  pec.hpp
src/Export/: CMakeLists.txt  exporter.cpp  exporter.hpp
src/Integration/: CMakeLists.txt  dcell_integral.cpp  dcell_integral.hpp  integral.hpp
src/Loader/: CMakeLists.txt  loader.cpp  loader.hpp
src/Mesh/: CMakeLists.txt  dcell.hpp  dofspace.cpp  dofspace.hpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp
src/Quadrature/: CMakeLists.txt  legendregauss.cpp  legendregauss.hpp  quad_2d.cpp  quad_2d.hpp  quadraturerule.hpp  simplex_gm_rule.cpp  triangle_dunavant_rule.hpp
test/: CMakeLists.txt  testfunctions.hpp  testhelpers.hpp
test/DDR/: CMakeLists.txt  hodge_display.cpp  spaces_L2product.cpp  spaces_comm.cpp  spaces_exact.cpp  spaces_interpolate.cpp  spaces_interpolate.cpp.old  spaces_potential.cpp  test_all.sh
test/debug/: CMakeLists.txt  dofs.cpp  graph.cpp  integral.cpp  orientation.cpp  pullback.cpp
test/debug/notebooks/: Mesh_read.ipynb  Mesh_read3.ipynb  Orientation read.ipynb
